01/11 - More corrections from Ed. Up to sensitivity function

--- a/atompreparation.tex
+++ b/atompreparation.tex
@@ -442,7 +442,7 @@ Zeeman shift (\sivalue{1.4}{\MHz\per\gauss}) of the $m_F = -1$ state is \sivalue
 field strength of \sivalue{3.17}{\gauss}. This is in close agreement
 with the value measured from the second-order shift of the 0
 \(\rightarrow\) 0 clock transition. The second-order shift of
-\sivalue{575.15}{\hert\per\gauss\squared} and the measured shift of
+\sivalue{575.15}{\hertz\per\gauss\squared} and the measured shift of
 \sivalue{5.6}{\kilo\hertz} correspond to a field strength of
 \sivalue{3.12}{\gauss}. 
 \begin{figure}[!htbp]
@@ -551,7 +551,7 @@ given by
   \label{eq:damped_rabi}
 \end{equation}
 and gives a characteristic time of $\tau = 1/\gamma =$
-\sivalue{1016}{\mus}. It is clear that \EquationRef{eq:damped_rabi}
+\sivalue{1016}{\micro\second}. It is clear that \EquationRef{eq:damped_rabi}
 does not exactly described the observed dephasing. This is not
 surprising given that there is no reason that an inhomogeneous
 microwave field should give an exponential dephasing rate.
@@ -587,7 +587,7 @@ $\ket{1,0}$ population is driven into $\ket{2,0}$.
     \caption[Microwave transition spectrum]{\textbf{(a)} shows the
       microwave transition spectrum before (blue) and after (orange)
     \trans{1}{0} pumping. The inset is a magnification around $\delta
-    f_\textnormal{hfs}$ showing the $m_F = 0$ \rightarrow $m_F' = 0$
+    f_\textnormal{hfs}$ showing the $m_F = 0 \rightarrow m_F' = 0$
     clock transition. \textbf{(b)} shows the transitions addressed
   as the microwave frequency is varied. Dashed and lines indicate
 \(\Delta m = \pm 1\) transitions and solid lines indicate \(\Delta m =
