12/11 - Most of acceleration section re-written

--- a/ramanoptics.tex
+++ b/ramanoptics.tex
@@ -512,6 +512,7 @@ piezo-stack is connected to a high-voltage feedthrough, so that their length
 applied across them. A control voltage ranging between 0--\sivalue{10}{\volt} is
 amplified by a controller to give an applied voltage across the piezo stack
 between -10--\sivalue{150}{\volt}. This corresponds to a travel range of
+\sivalue{23}{\um}.
 \subsection{In-Situ Alignment and Optimisation}\label{sec:in_situ} 
 After mounting the Raman optical system inside the chamber, the
 mirror had to be aligned to retro-reflect the light. When the mirror is close to
